# ivory-avr

./: .gitignore  CMakeLists.txt  README.md  TODO.md  blink.i  blink.s  build_asm.sh  build_c.sh  hex.sh  hie.yaml  ivory-avr.cabal  stack.yaml  upload.sh
asm/: led_on.asm
avr-build/: CMakeLists.txt
c/: blink.c
src/: Main.hs
src/c/: serial_monitor.c
src/ivory/: AvrRegisterGenerator.hs  Blink.hs  Delay.hs  Main.hs  Panic.hs  Registers.hs  SafeIx.hs
src/sim/: main.c
