name:                ivory-avr
version:             0.1.0.0
homepage:            https://github.com/githubuser/ivory-avr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ivory-avr
  hs-source-dirs:      src/ivory
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Delay
                     , Panic
                     , SafeIx
  build-depends:       base >= 4.7 && < 5
                     , ivory
                     , ivory-backend-c
                     , ivory-hw
                     , ivory-artifact
                     , ivory-stdlib
                     , ivory-avr-atmega328p-registers
                     , directory
                     , serialport
                     , text
                     , containers
                     , attoparsec
                     , bytestring
                     , vector
